--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "firebase": "^9.6.4",
     "moment": "^2.29.1",
     "node-sass": "^7.0.1",
+    "rc-calendar": "^9.15.11",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
@@ -38,5 +39,4 @@
       "last 1 safari version"
     ]
   }
-  
 }
